# pins-python

./: .buildinfo  .env.dev  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.Rmd  README.md  README.qmd  _quarto.yml  customize-pins-metadata.html  docker-compose.yml  genindex.html  get_started.html  getting_started.html  getting_started.ipynb  index.html  intro.html  objects.inv  pyproject.toml  search.html  search.json  searchindex.js  setup.cfg
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.doctrees/api/: boards.doctree  filesystem.doctree  index.doctree  meta.doctree
.doctrees/api/api_card/: pins.BaseBoard.doctree  pins.BaseBoard.pin_browse.doctree  pins.BaseBoard.pin_delete.doctree  pins.BaseBoard.pin_download.doctree  pins.BaseBoard.pin_exists.doctree  pins.BaseBoard.pin_list.doctree  pins.BaseBoard.pin_meta.doctree  pins.BaseBoard.pin_read.doctree  pins.BaseBoard.pin_search.doctree  pins.BaseBoard.pin_upload.doctree  pins.BaseBoard.pin_version_delete.doctree  pins.BaseBoard.pin_versions.doctree  pins.BaseBoard.pin_versions_prune.doctree  pins.BaseBoard.pin_write.doctree  pins.boards.IFileSystem.doctree  pins.boards.IFileSystem.exists.doctree  pins.boards.IFileSystem.get.doctree  pins.boards.IFileSystem.info.doctree  pins.boards.IFileSystem.ls.doctree  pins.boards.IFileSystem.mkdir.doctree  pins.boards.IFileSystem.open.doctree  pins.boards.IFileSystem.put.doctree  pins.boards.IFileSystem.rm.doctree  pins.meta.Meta.doctree  pins.meta.MetaFactory.doctree  pins.versions.Version.doctree  pins.versions.VersionRaw.doctree
.doctrees/nbsphinx/: getting_started.ipynb
.doctrees/user_guide/: index.doctree
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  code-checks.yml  cross-compat.yml  integration.yml
_sources/: getting_started.Rmd  getting_started.Rmd.txt  intro.ipynb  intro.md
_sources/api/: constructors.rst  index.rst  meta.rst
_sources/api/api_card/: pins.BaseBoard.pin_browse.rst.txt  pins.BaseBoard.pin_delete.rst  pins.BaseBoard.pin_download.rst.txt  pins.BaseBoard.pin_exists.rst  pins.BaseBoard.pin_list.rst  pins.BaseBoard.pin_meta.rst.txt  pins.BaseBoard.pin_read.rst  pins.BaseBoard.pin_search.rst  pins.BaseBoard.pin_upload.rst.txt  pins.BaseBoard.pin_version_delete.rst  pins.BaseBoard.pin_versions.rst.txt  pins.BaseBoard.pin_versions_prune.rst  pins.BaseBoard.pin_write.rst.txt  pins.BaseBoard.rst  pins.board.rst  pins.board_azure.rst  pins.board_connect.rst  pins.board_folder.rst  pins.board_gcs.rst  pins.board_local.rst  pins.board_rsconnect.rst  pins.board_s3.rst  (+31 more)
_sources/articles/: index.rst
api/: boards.html  constructors.html  filesystem.html  index.html  meta.html
api/api_card/: pins.BaseBoard.html  pins.BaseBoard.pin_browse.html  pins.BaseBoard.pin_delete.html  pins.BaseBoard.pin_download.html  pins.BaseBoard.pin_exists.html  pins.BaseBoard.pin_list.html  pins.BaseBoard.pin_meta.html  pins.BaseBoard.pin_read.html  pins.BaseBoard.pin_search.html  pins.BaseBoard.pin_upload.html  pins.BaseBoard.pin_version_delete.html  pins.BaseBoard.pin_versions.html  pins.BaseBoard.pin_versions_prune.html  pins.BaseBoard.pin_write.html  pins.board.html  pins.board_azure.html  pins.board_connect.html  pins.board_folder.html  pins.board_gcs.html  pins.board_local.html  pins.board_rsconnect.html  pins.board_s3.html  pins.board_temp.html  pins.board_url.html  pins.boards.BaseBoard.html  pins.boards.BaseBoard.pin_browse.html  pins.boards.BaseBoard.pin_delete.html  pins.boards.BaseBoard.pin_download.html  pins.boards.BaseBoard.pin_exists.html  pins.boards.BaseBoard.pin_list.html  pins.boards.BaseBoard.pin_meta.html  pins.boards.BaseBoard.pin_read.html  pins.boards.BaseBoard.pin_search.html  pins.boards.BaseBoard.pin_upload.html  pins.boards.BaseBoard.pin_version_delete.html  pins.boards.BaseBoard.pin_versions.html  pins.boards.BaseBoard.pin_versions_prune.html  pins.boards.BaseBoard.pin_write.html  pins.boards.IFileSystem.exists.html  pins.boards.IFileSystem.get.html  (+11 more)
articles/: customize-pins-metadata.html  index.html
binder/: requirements.txt
docs/: .gitignore  _config.yml  _quarto.yml  _toc.yml  conf.py  customize-pins-metadata.qmd  get_started.qmd  getting_started.Rmd  index.qmd  index.rst  intro.md  logging-pins.qmd
docs-quarto/: Makefile  _quarto.yml  _sidebar.yml  customize-pins-metadata.qmd  get_started.qmd  index.qmd  objects.json
docs/api/: boards.rst  constructors.rst  filesystem.rst  index.rst
docs/articles/: customize-pins-metadata.Rmd
integration/: .gitignore  Makefile  compose.yaml
pins/: __init__.py  __main__.py  _adaptors.py  _types.py  adaptors.py  boards.py  cache.py  config.py  constructors.py  drivers.py  errors.py  meta.py  rsconnect_api.py  utils.py  versions.py
pins/data/: __init__.py
pins/databricks/: fs.py
pins/rsconnect/: api.py  fs.py
pins/tests/: .gitignore  conftest.py  helpers.py  test_adaptors.py  test_boards.py  test_cache.py  test_compat.py  test_compat_old_types.py  test_config.py  test_constructors.py  test_drivers.py  test_meta.py  test_rsconnect_api.py  test_utils.py  test_versions.py
reference/: board.html  board_azure.html  board_connect.html  board_databricks.html  board_folder.html  board_gcs.html  board_local.html  board_s3.html  board_temp.html  board_url.html  index.html  pin_delete.html  pin_download.html  pin_exists.html  pin_list.html  pin_meta.html  pin_read.html  pin_search.html  pin_upload.html  pin_version_delete.html  pin_versions.html  pin_versions_prune.html  pin_write.html
requirements/: dev.txt  minimum.txt
script/: stage_example_bundle.py  stage_r_pins.R  stage_r_pins_old_types.R
script/ci-compat-check/: Makefile  dump_py_pins.py  dump_r_pins.R  validate_py_to_r.R  validate_r_to_py.py
script/setup-rsconnect/: dump_api_keys.py  rstudio-connect.gcfg  users.txt
site_libs/bootstrap/: bootstrap-472c5a19eb26a145a9e7cd454cd64706.min.css  bootstrap-708e4a4672f38a6642e1401e01e821c5.min.css  bootstrap-75a8ef3dd8146ef79eeff788e86325cf.min.css  bootstrap.min.css
user_guide/: index.html
(+37 files in other folders)
