[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["pins"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = ["skip_on_github: skip this test if running on github"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 90
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
