[metadata]
name = pins
version = file: VERSION
description = Publish data sets, models, and other R objects, making it easy to share them across projects and with your colleagues.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/machow/pins-python
author = Michael Chow
author_email = mc_al_github@fastmail.com
license = MIT
keywords = data, tidyverse
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =
    fsspec
    pyyaml
    xxhash
    pandas
    jinja2
    joblib
    importlib-metadata
    importlib-resources
    appdirs
    humanize


[options.extras_require]
aws =
    s3fs
azure =
    adlfs

doc =
    sphinx
    jupytext
    jupyter-book

test =
    pip-tools
    pytest
    pytest-cases
    pytest-dotenv
    s3fs
    adlfs


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 90
ignore =
    E501    # line too long
    W503    # line before binary operator
