[metadata]
name = pins
description = Publish data sets, models, and other python objects, making it easy to share them across projects and with your colleagues.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rstudio/pins-python
author = Michael Chow
author_email = mc_al_github@fastmail.com
license = MIT
keywords = data, tidyverse
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =
    fsspec>=0.8.0
    pyyaml>=3.13
    xxhash>=1.0.0
    pandas>=0.23.0
    jinja2>=2.10.0
    joblib>=0.12.0
    importlib-metadata>=4.4
    importlib-resources>=1.3
    appdirs<2.0.0
    humanize>=1.0.0
    requests


[options.extras_require]
aws =
    s3fs
azure =
    adlfs
gcs =
    gcsfs

doc =
    ipython<=8.12.0
    ipykernel
    nbformat
    nbclient
    quartodoc

test =
    pip-tools
    pytest==7.1.3
    pytest-cases
    pytest-dotenv
    pytest-parallel
    s3fs
    adlfs==2022.2.0
    gcsfs
    fastparquet
    pyarrow


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 90
ignore =
    # line too long
    E501
    # line before binary operator
    W503
